FIX: Boxes aren't responsive on mobile

--- a/admin/css/wp-coutb-boxes.css
+++ b/admin/css/wp-coutb-boxes.css
@@ -1,5 +1,6 @@
 .wp-coutb-callout-box {
     border-radius: 4px;
+    box-sizing: border-box;
     display: inline-flex;
     margin-bottom: 1rem;
     padding: 20px;
@@ -51,7 +52,9 @@
 }
 
 .wp-coutb-callout-box__icon {
+    height: 30px;
     margin-right: 10px;
+    width: 30px;
 }
 
 .wp-coutb-callout-box__icon svg {
